RESOLVED FIXED33181
The first letter is not removed properly from inline input hole
https://bugs.webkit.org/show_bug.cgi?id=33181
Summary The first letter is not removed properly from inline input hole
Alexey Proskuryakov
Reported 2010-01-04 15:08:51 PST
One needs to press Backspace twice to delete the last character from inline input hole in Windows Safari. Steps to reproduce: 1. Enable and select Korean input method. 2. Type "gks" for 한. 3. Press Backspace 3 times. Expected results: 한' is divided into 3 syllables, so it should be removed after pressing Delete key 3 times. But now the last consonant, 'ㅎ' still remains. I could reproduce the same issue with Chinese Simplified IM. <rdar://problem/5781451>
Attachments
proposed fix (1.37 KB, patch)
2010-01-04 15:12 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-01-04 15:12:09 PST
Created attachment 45836 [details] proposed fix
WebKit Review Bot
Comment 2 2010-01-04 15:15:33 PST
style-queue ran check-webkit-style on attachment 45836 [details] without any errors.
Alexey Proskuryakov
Comment 3 2010-01-04 15:51:48 PST
Note You need to log in before you can comment on or make changes to this bug.