        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=33181
        The first letter is not removed properly from inline input hole

        * WebView.cpp: (WebView::onIMEEndComposition): If composition is ended before it was
        confirmed, cancel it.



Canonical link: https://commits.webkit.org/44180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52767 268f45cc-cd09-0410-ab3c-d52691b4dbfc